[package]
name = "crypto_store"
version = "0.1.0"
authors = ["kekonen <daniil.naumetc@gmail.com>"]
edition = "2018"

[dependencies]
rocket = "0.3.17"
rocket_codegen = "0.3.17"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
time = "0.1.40"

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json"]